# LT101

./: Design.md  README.md  gradlew  gradlew.bat  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/livetranslate/: MainActivity.kt
app/src/main/java/com/livetranslate/audio/: AudioPipelineManager.kt  AudioRecordService.kt  CircularAudioBuffer.kt
app/src/main/java/com/livetranslate/ml/: InferenceEngines.kt  ModelManager.kt  SileroVAD.kt  TranslationPipeline.kt
app/src/main/java/com/livetranslate/ui/: LiveDuplexScreen.kt  LiveTranslateViewModel.kt  TranslationScreen.kt
app/src/main/res/values/: colors.xml  themes.xml
gradle/: libs.versions.toml
